# comet

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  goals.md
comet_structs/: Cargo.toml
comet_structs/src/: column.rs  flat_map.rs  lib.rs  sparse_set.rs
crates/comet_app/: Cargo.toml
crates/comet_app/src/: app.rs  asset_path.rs  lib.rs  module.rs  module_tuple.rs  renderer.rs  runner.rs
crates/comet_assets/: Cargo.toml
crates/comet_assets/src/: asset_handle.rs  asset_manager.rs  asset_module.rs  asset_path.rs  asset_provider.rs  asset_store.rs  atlas_ref.rs  audio_clip.rs  font.rs  graphic_resource_manager.rs  image.rs  lib.rs  loader_registry.rs  resources.rs  texture_atlas.rs
crates/comet_audio/: Cargo.toml
crates/comet_audio/src/: audio.rs  audio_module.rs  kira.rs  lib.rs
crates/comet_colors/: Cargo.toml
crates/comet_colors/src/: hsla.rs  hsva.rs  hwba.rs  laba.rs  lcha.rs  lib.rs  linear_rgba.rs  oklaba.rs  oklcha.rs  rgba.rs  xyza.rs
crates/comet_ecs/: Cargo.toml
crates/comet_ecs/component_derive/: Cargo.toml
crates/comet_ecs/component_derive/src/: lib.rs
crates/comet_ecs/src/: archetypes.rs  bundles.rs  component.rs  component_storage.rs  component_tuple.rs  ecs_module.rs  entity.rs  id.rs  lib.rs  prefabs.rs  query.rs  query_plan_cache.rs  scene.rs  scene_commands.rs  scene_internals.rs  sparse_set.rs  storage.rs  world.rs
crates/comet_ecs/src/query/: arities.rs  builders.rs  fetch.rs  filters.rs  iterators.rs  mod.rs  query_types.rs  scene_query.rs  tuple_types.rs
crates/comet_ecs/src/query/builders/: mod.rs  single.rs  tuples.rs
crates/comet_ecs/src/query/iterators/: mod.rs  single.rs  tuples.rs
crates/comet_fonts/: Cargo.toml
crates/comet_gizmos/: Cargo.toml
crates/comet_gizmos/src/: buffer.rs  context.rs  gizmo.rs  lib.rs
crates/comet_input/: Cargo.toml
crates/comet_input/src/: input_handler.rs  input_module.rs  keyboard.rs  lib.rs  mouse.rs  winit_input_module.rs
crates/comet_log/: Cargo.toml
crates/comet_log/src/: lib.rs
crates/comet_macros/: Cargo.toml
crates/comet_macros/src/: lib.rs
crates/comet_math/: Cargo.toml
crates/comet_math/src/: bezier.rs  easings.rs  interpolation.rs  lib.rs  matrix.rs  noise.rs  point.rs  polynomial.rs  quaternion.rs  utilities.rs  vector.rs
crates/comet_renderer/: Cargo.toml
crates/comet_renderer/src/: batch.rs  camera.rs  draw_info.rs  gizmo_registry.rs  gpu_texture.rs  lib.rs  model.rs  render2d.rs  render_commands.rs  render_context.rs  render_events.rs  render_group.rs  render_pass.rs  render_resources.rs  render_state.rs  renderer.rs  renderer2d.rs  shader.wgsl  texture.rs
crates/comet_renderer/src/render_graph/: mod.rs  node.rs
crates/comet_renderer/src/render_graph/nodes/: mod.rs  pass_node.rs  post_process.rs
crates/comet_renderer/src/renderer2d_/: base.wgsl  mod.rs  render_context.rs
crates/comet_resources/: Cargo.toml
crates/comet_resources/src/: asset_handle.rs  asset_manager.rs  asset_store.rs  atlas_ref.rs  font.rs  graphic_resource_manager.rs  lib.rs  material.rs  resources.rs  texture.rs  texture_atlas.rs  vertex.rs
crates/comet_sound/: Cargo.toml
crates/comet_sound/src/: audio.rs  kira.rs  lib.rs
crates/comet_structs/: Cargo.toml
crates/comet_structs/src/: column.rs  component_set.rs  component_storage.rs  componet_set.rs  flat_map.rs  iter_mut.rs  lib.rs  sparse_set.rs
crates/comet_ui/: Cargo.toml
crates/comet_window/: Cargo.toml
crates/comet_window/src/: app_ext.rs  lib.rs  renderer.rs  winit_module.rs
examples/: README.md  bundles.rs  gizmos.rs  hello_sound.rs  hello_world.rs  input.rs  input_mapping.rs  prefabs.rs  query_change_filters.rs  simple_audio.rs  simple_move_2d.rs  simple_text.rs  textured_entity.rs
res/shaders/: base2d.wgsl  blacknwhite.wgsl  crt.wgsl
resources/shaders/: glitch.wgsl
src/: lib.rs  main.rs
