[package]
name = "comet"
version = "0.1.0"
edition = "2021"
authors = ["lisk77 <contact@lisk77.dev>"]
description = "A games framework"
repository = "https://github.com/lisk77/comet"

[dependencies]
comet_app = { path = "./crates/comet_app", workspace = true }
comet_colors = { path = "./crates/comet_colors", workspace = true }
comet_math = { path = "./crates/comet_math", workspace = true }
comet_renderer = { path = "./crates/comet_renderer", workspace = true }
comet_resources = { path = "./crates/comet_resources", workspace = true }
comet_ecs = { path = "./crates/comet_ecs", workspace = true }
comet_input = { path = "./crates/comet_input", workspace = true }
comet_log = { path = "./crates/comet_log", workspace = true }
comet_structs = { path = "./crates/comet_structs", workspace = true }

cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
tobj = { version = "3.2", default-features = false, features = ["async"]}
wgpu = { version = "22.0"}
winit = { version = "0.29", features = ["rwh_05"] }
instant = "0.1"
image = { version = "0.24", default_features = false, features = ["png", "jpeg", "hdr"] }
chrono = "0.4.38"
colored = "2.1.0"
winit_input_helper = "0.16.0"
spin_sleep = "1.2.1"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[workspace]
members = [
    "./crates/comet_app",
    "./crates/comet_colors",
    "./crates/comet_math",
    "./crates/comet_renderer",
    "./crates/comet_resources",
    "./crates/comet_ecs",
    "./crates/comet_input",
    "./crates/comet_log",
    "./crates/comet_ui",
    "./crates/comet_fonts",
    "./crates/comet_sound",
    "./crates/comet_structs"
]

[workspace.dependencies]
comet_app = { path = "./crates/comet_app", workspace = true }
comet_colors = { path = "./crates/comet_colors", workspace = true }
comet_math = { path = "./crates/comet_math", workspace = true }
comet_renderer = { path = "./crates/comet_renderer", workspace = true }
comet_resources = { path = "./crates/comet_resources", workspace = true }
comet_ecs = { path = "./crates/comet_ecs", workspace = true }
comet_input = { path = "./crates/comet_input", workspace = true }
comet_log = { path = "./crates/comet_log", workspace = true }
comet_structs = { path = "./crates/comet_structs", workspace = true }
