[package]
name = "comet"
version = "0.1.0"
edition = "2021"
authors = ["lisk77 <contact@lisk77.dev>"]
description = "A games framework"
repository = "https://github.com/lisk77/comet"

[dependencies]
comet_app = { workspace = true }
comet_window = { workspace = true }
comet_colors = { workspace = true }
comet_math = { workspace = true }
comet_renderer = { workspace = true }
comet_assets = { workspace = true }
comet_ecs = { workspace = true }
comet_input = { workspace = true }
comet_log = { workspace = true }
comet_audio = { workspace = true }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[workspace]
members = [
    "./crates/comet_app",
    "./crates/comet_colors",
    "./crates/comet_math",
    "./crates/comet_renderer",
    "./crates/comet_assets",
    "./crates/comet_ecs",
    "./crates/comet_input",
    "./crates/comet_log",
    "./crates/comet_ui",
    "./crates/comet_audio",
    "./crates/comet_structs",
    "./crates/comet_macros",
    "./crates/comet_window"
]

[workspace.dependencies]
comet_app = { path = "./crates/comet_app" }
comet_colors = { path = "./crates/comet_colors" }
comet_math = { path = "./crates/comet_math" }
comet_renderer = { path = "./crates/comet_renderer" }
comet_assets = { path = "./crates/comet_assets" }
comet_ecs = { path = "./crates/comet_ecs" }
comet_input = { path = "./crates/comet_input" }
comet_log = { path = "./crates/comet_log" }
comet_structs = { path = "./crates/comet_structs" }
comet_audio = { path = "./crates/comet_audio" }
comet_macros = { path = "./crates/comet_macros" }
comet_window = { path = "./crates/comet_window" }

anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
flume = "0.12.0"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "hdr"] }
wgpu = "22.0"
winit = { version = "0.29", features = ["rwh_05"] }
