[package]
name = "comet_app"
version = "0.2.0"
edition = "2021"

[dependencies]
comet_colors = { path = "../comet_colors" }
comet_log = { path = "../comet_log" }
comet_input = { path = "../comet_input" }
comet_structs = { path = "../comet_structs" }

winit = { version = "0.29", features = ["rwh_05"] }
pollster = "0.3"
winit_input_helper = "0.16.0"
crossbeam-channel = "0.5.14"
chrono = "0.4.40"
wgpu = "22.0"
flume = "0.12.0"
anyhow = "1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "hdr"]
