[package]
name = "comet_ecs"
version = "0.2.0"
edition = "2021"

[dependencies]
comet_app = { path = "../comet_app" }
component_derive = { path = "./component_derive" }
comet_math = { path = "../comet_math" }
comet_log = { path = "../comet_log" }
comet_assets = { path = "../comet_assets" }
comet_structs = { path = "../comet_structs" }
comet_colors = { path = "../comet_colors" }
wgpu = { version = "22.0" }
chrono = "0.4.40"
