[package]
name = "comet_ecs"
version = "0.2.0"
edition = "2021"

[dependencies]
comet_app = { workspace = true }
component_derive = { path = "./component_derive" }
comet_math = { workspace = true }
comet_log = { workspace = true }
comet_assets = { workspace = true }
comet_structs = { workspace = true }
comet_colors = { workspace = true }
wgpu = { workspace = true }
