[package]
name = "comet_renderer"
version = "0.2.0"
edition = "2021"

[features]
default = []
comet_debug = []

[dependencies]
comet_app = { path = "../comet_app" }
comet_window = { path = "../comet_window" }
comet_ecs = { path = "../comet_ecs" }
comet_math = { path = "../comet_math" }
comet_assets = { path = "../comet_assets" }
comet_colors = { path = "../comet_colors" }
comet_log = { path = "../comet_log" }
comet_structs = { path = "../comet_structs" }
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
wgpu = { version = "22.0", features = ["glsl", "wgsl", "naga-ir"]}
winit = { version = "0.29", features = ["rwh_05"] }
chrono = "0.4.40"
pollster = "0.3"
image = "0.24"
flume = "0.12.0"
anyhow = "1.0"
