[package]
name = "comet_renderer"
version = "0.2.0"
edition = "2021"

[features]
default = []
comet_debug = []

[dependencies]
comet_app = { workspace = true }
comet_macros = { workspace = true }
comet_gizmos = { workspace = true }
comet_window = { workspace = true }
comet_ecs = { workspace = true }
comet_math = { workspace = true }
comet_assets = { workspace = true }
comet_colors = { workspace = true }
comet_log = { workspace = true }
comet_structs = { workspace = true }
bytemuck = { workspace = true }
cgmath = "0.18"
wgpu = { workspace = true, features = ["glsl", "wgsl", "naga-ir"] }
winit = { workspace = true }
pollster = "0.3"
image = { workspace = true }
flume = { workspace = true }
anyhow = { workspace = true }
