[package]
name = "comet_resources"
version = "0.1.0"
edition = "2021"

[dependencies]
comet_log = { path = "../comet_log" }
wgpu = { version = "22.0", features = ["spirv"] }
anyhow = "1.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
ab_glyph = "0.2.29"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "hdr"]
