[package]
name = "comet_window"
version = "0.1.0"
edition = "2021"

[dependencies]
comet_app = { path = "../comet_app" }
comet_macros = { path = "../comet_macros" }
comet_colors = { path = "../comet_colors" }
comet_log = { path = "../comet_log" }

winit = { version = "0.29", features = ["rwh_05"] }
winit_input_helper = "0.16.0"
wgpu = "22.0"
flume = "0.12.0"
anyhow = "1.0"
chrono = "0.4"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "hdr"]
