[package]
name = "comet_window"
version = "0.1.0"
edition = "2021"

[dependencies]
comet_app = { workspace = true }
comet_macros = { workspace = true }
comet_colors = { workspace = true }
comet_log = { workspace = true }
winit = { workspace = true }
winit_input_helper = { workspace = true }
wgpu = { workspace = true }
flume = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
